--- a/style_projects.css
+++ b/style_projects.css
@@ -14,19 +14,20 @@
     border: 1px solid black;
     margin: 1rem 0;
     border-radius: 50px;
+    background-color: black;
 }
 
 .header-content a{
-    color: black;
+    color: white;
 }
 
 .header-content li:hover{
-    background-color: black;
+    background-color: white;
     transition: all 0.25s ease-in-out;
 }
 
 .header-content li:hover a{
-    color: white;
+    color: black;
 }
 
 .header-content{
