--- a/style_projects.css
+++ b/style_projects.css
@@ -1,5 +1,30 @@
-.back-container{
-    display: none;
+
+
+.header-container{
+    position: relative;
+}
+
+.header-container::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-image: url('./images/deskclub/deskclub_thumbnail.png');
+    background-position: center;
+    background-repeat: repeat-x;
+    object-fit: cover;
+    z-index: -1;
+    opacity: 0.3;
+}
+
+.header-inner-container{
+    max-width: 55rem;
+}
+
+.header-content{
+    background-color: white;
 }
 
 .header-content ul{
@@ -37,16 +62,6 @@
 
 
 @media (min-width: 1100px){
-
-    .back-container{
-        display: block;
-        position: fixed;
-        padding: 2rem 0rem 0rem 4rem;
-    }
-
-    .back-container:hover a{
-        color: rgba(0, 0, 0, 0.7);
-    }
 
     .header-content ul{
         padding: 1rem;
