--- a/style_index.css
+++ b/style_index.css
@@ -39,6 +39,7 @@ li{
 .project-header p:first-of-type,
 .skill-header p:first-of-type,
 .contact-header p:first-of-type{
+    /* border: 1px solid red; */
     font-size: 3rem;
     line-height: 3.5rem;
     padding-bottom: 0.25rem;
@@ -47,6 +48,7 @@ li{
 .project-header p:last-of-type,
 .skill-header p:last-of-type,
 .contact-header p:last-of-type{
+    /* border: 1px solid red; */
     text-transform: uppercase;
     font-size: 0.75rem;
     font-weight: 700;
@@ -83,6 +85,7 @@ li{
 
 p,
 button{
+    /* border: 1px solid red; */
     font-size: 1.25rem;
     line-height: 2rem;
 }
@@ -254,6 +257,7 @@ button{
 }
 
 .skill > *:nth-child(even) p:first-of-type{
+    /* border: 1px solid red; */
     border: none;
     margin-bottom: 0;
     font-size: 1rem;
@@ -338,6 +342,7 @@ form textarea{
 }
 
 .footer-container p{
+    /* border: 1px solid red; */
     font-size: 1rem;
 }
 
@@ -352,6 +357,7 @@ form textarea{
 }
 
 .footer-container ul li i{
+    /* border: 1px solid red; */
     font-size: 2rem
 }
 
@@ -395,6 +401,7 @@ form textarea{
     .project-header p:first-of-type,
     .skill-header p:first-of-type,
     .contact-header p:first-of-type{
+        /* border: 1px solid red; */
         font-size: 4.5rem;
         line-height: 5rem;
     }
@@ -402,6 +409,7 @@ form textarea{
     .project-header p:last-of-type,
     .skill-header p:last-of-type,
     .contact-header p:last-of-type{
+        /* border: 1px solid red; */
         text-transform: uppercase;
         font-size: 0.85rem;
         font-weight: 700;
@@ -409,11 +417,13 @@ form textarea{
 
     p,
     button{
+        /* border: 1px solid red; */
         font-size: 1.5rem;
         line-height: 2rem;
     }
     
     button{
+        /* border: 1px solid red; */
         font-size: 1.25rem;
         line-height: 2rem;
     }
@@ -543,6 +553,7 @@ form textarea{
     }
 
     .skill p{
+        /* border: 1px solid red; */
         font-size: 1rem;
     }
 
@@ -574,6 +585,7 @@ form textarea{
 
     .about-content p{
         text-align: left;
+        font-size: 1.25rem;
     }
 
 
