--- a/style_projects.css
+++ b/style_projects.css
@@ -26,6 +26,11 @@
 .header-content{
     background-color: white;
 }
+.header-content p:nth-child(2){
+    padding: 1rem;
+    font-size: 1.25rem;
+}
+
 
 .header-content ul{
     padding: 0;
@@ -63,6 +68,10 @@
 
 @media (min-width: 1100px){
 
+    .header-content{
+        text-align: center;
+    }
+    
     .header-content ul{
         padding: 1rem;
         max-width: 45rem;
