--- a/style_index.css
+++ b/style_index.css
@@ -11,8 +11,13 @@ html{
 
 a{
     text-decoration: none;
-    font-weight: 900;
+    font-weight: 500;
     color: black
+}
+
+a:hover{
+    text-shadow:0px 0px 1px black;
+    transition: all 200ms ease-in-out;
 }
 
 li{
@@ -149,6 +154,14 @@ button{
 
 
 /* HEADER CONTAINER */
+
+.header-container{
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .header-content p:last-of-type{
     max-width: 35rem;
