--- a/style_index.css
+++ b/style_index.css
@@ -35,7 +35,7 @@ li{
 .project-inner-container,
 .contact-inner-container{
     /* border: 1px solid black; */
-    padding: 8rem 3rem;
+    padding: 8rem 0rem;
     width: 100%;
     margin: 0 auto;
 }
@@ -118,7 +118,7 @@ button{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    padding: .5rem;
 }
 
 .nav-links{
@@ -259,12 +259,16 @@ button{
     padding: 0;
 }
 
+.skill > *:nth-child(even):last-child{
+    padding-bottom: 2rem;
+}
+
 .skill > *:nth-child(odd){
     padding: 2rem 0 0 0;
 }
 
 .skill{
-    padding: 0 5rem;
+    padding: 0 2rem;
     background-color: rgba(0, 0, 0, 0.05);
 }
 
@@ -317,11 +321,12 @@ button{
 /* CONTACT CONTAINER */
 
 .contact-inner-container{
-    padding: 2rem 5rem 4rem 5rem;
+    padding: 2rem 2rem 4rem 2rem;
 }
 
 .contact-form input,
 .contact-form textarea{
+    padding: 0 0 0 1rem;
     border: none;
     width: 100%;
     height: 4rem;
@@ -338,6 +343,7 @@ button{
 }
 
 form textarea{
+    padding: 1rem 0 0 1rem !important;
     max-width: 100%;
 }
 
