--- a/style_index.css
+++ b/style_index.css
@@ -1,5 +1,6 @@
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 *{
@@ -195,34 +196,24 @@ button{
 
 /* PROJECT CONTAINER */
 
-.project-content{
-    /* border: 1px solid red; */
-    width: 100%;
-    margin: 0 auto;
+.project-items{
+    padding: 0 1rem;
 }
 
-.project-item{
-    margin: 1rem;
+.item{
+    padding: 1rem 0;
+}
+
+.item-top{
     position: relative;
-    display: block
-}
- 
-.project-item::before{
-    content: '';
-    display: block;
-    width: 100%;
-    padding-bottom: 56.25%;
 }
 
-.project-image{
-    position: absolute;
-    top: 0;
-    left: 0;
+.item img{
     width: 100%;
-    height: 100%
+    display: inline-block;
 }
 
-.project-overlay{
+.item-overlay{
     position: absolute;
     top: 0;
     left: 0;
@@ -234,14 +225,60 @@ button{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
-    color: white;
+
     opacity: 0;
     transition: opacity 0.25s ease-in-out;
 }
 
-.project-overlay:hover{
-    opacity: 1; 
+.item-links{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.item-links a{
+    color: white;
+    width: 100%;
+}
+
+.item-links a:hover{
+    color: rgba(255, 255, 255, 0.85);
+    cursor: pointer;
+}
+
+.item-top:hover .item-overlay{
+    opacity: 1;
+}
+
+.item-content * {
+    padding: .15rem 0;
+}
+
+.item-content p:first-of-type{
+    font-weight: bold;
+    text-align: left;
+    padding-top: 0.5rem;
+}
+
+.item-techs ul{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.item-techs ul li:not(:last-of-type){
+    padding-right: 1rem;
+}
+
+.item-content p:last-of-type{
+    text-align: left;
+    font-size: 1rem;
+    color: rgba(0, 0, 0, .7);
+    line-height: 1.75rem;
+}
+
+
 
 
 /* SKILLS CONTAINER */
@@ -560,13 +597,12 @@ form textarea{
 
 
     /* PROJECTS */
-    .project-content{
+    .project-items{
         width: 100%;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        grid-gap: 3rem;
     }
-
-
 
     /* SKILLS */
 
